--- a/COMPANHIAS/sevenair.html
+++ b/COMPANHIAS/sevenair.html
@@ -71,6 +71,13 @@
                 aspirantes a piloto, tripulação de cabina, despachantes de voo e técnicos de manutenção. A divisão de
                 manutenção é líder em serviços gerais de manutenção e engenharia de aviação e o grupo também oferece
                 aviônica e revenda de aeronaves e serviços pós-venda.</p>
+            <p>Saiba mais sobre:</p>
+            <ul class="servicos">
+                <li><a href="https://academy.sevenair.com/pt-pt/" target="_blank">Sevenair Academy</a></li>
+                <li><a href="https://maintenance.sevenair.com/" target="_blank">Sevenair Maintenance</a></li>
+                <li><a href="https://avionics.sevenair.com/" target="_blank">Sevenair Avionics</a></li>
+            </ul>
+            <br>
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/-W86FctDqBU"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -80,6 +87,7 @@
             <br>
         </a>
     </main>
+    <br>
     <main>
         <a name="destinos">
             <h2>Destinos</h2>
@@ -90,6 +98,7 @@
             <br>
         </a>
     </main>
+    <br>
     <main>
         <a name="frota">
             <h2>Frota</h2>
@@ -103,11 +112,12 @@
                     </td>
                     <td>
                         <img class="imagemfrota" src="../img/companhias/frota/sevenair-do228-airline.webp"
-                            alt="Dornier 228">
+                            alt="Dornier 228BAe (Imagem do site oficial)">
                     </td>
                 <tr>
                     <td>
-                        <img class="imagemfrota" src="../img/companhias/frota/jetstream_32_red.webp" alt="Dornier 228">
+                        <img class="imagemfrota" src="../img/companhias/frota/jetstream_32_red.webp"
+                            alt="BAe Jetstream 32 (Imagem do site oficial)">
                     </td>
                     <td class="td-cont">
                         <h1>BAe Jetstream 32</h1>
@@ -124,12 +134,88 @@
                     </td>
                     <td>
                         <img class="imagemfrota" src="../img/companhias/frota/Sevenair_Casa_Aviocar_C212_site_novo.jpg"
-                            alt="Dornier 228">
+                            alt="Casa Aviocar C212 (Imagem do site oficial)">
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/skydiving-algarve-pilatus.webp"
+                            alt="Pilatus PC6 (Imagem do site oficial)">
+                    </td>
+                    <td class="td-cont">
+                        <h1>Pilatus PC6</h1>
+                        <p>Com 10 lugares para passageiros, o Pilatus PC6 pode atingir os <abbr title="279.65 Km/h">151
+                                Kts</abbr>. Esta companhia conta com 6 aeronaves dete modelo, sendo a dominante na
+                            Sevenair</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h1>Cessna 172</h1>
+                        <p>Com apenas 4 lugares, este modelo chega aos <abbr title="301.88 Km/h">163 Kts</abbr>. Este
+                            modelo destina-se apenas a voos turísticos e de charter. A companhia conta com 4 <em><a
+                                    href="#aircraft">aircraft</a></em>
+                            dete modelo.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/cessna-sevenair-172.webp"
+                            alt="Pilatus PC6 (Imagem do site oficial)">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/Sevenair_chieftain.webp"
+                            alt="Piper PA31 Chieftain (Imagem do site oficial)">
+                    </td>
+                    <td class="td-cont">
+                        <h1>Piper PA31 Chieftain</h1>
+                        <p>Com 9 lugares, este modelo pode atingir os <abbr title="420.4 Km/h">227 Kts</abbr>. Este
+                            modelo destina-se tambem a voos turísticos e de charter. A companhia conta com apenas 1
+                            <em><a href="#aircraft">aircraft</a></em>
+                            dete modelo.
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h1>Extra 300</h1>
+                        <p>Com apenas 2 lugares, este modelo atinge a velocidade máxima de <abbr title="342.62 Km/h">185
+                                Kts</abbr>. Este
+                            modelo destina-se tambem a voos de experiências aéreas e de demonstração. Tendo apenas 1
+                            <em><a href="#aircraft">aircraft</a></em>
+                            na sua frota.
+                        </p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/sevenair-extra-300-aerobatic-1.webp"
+                            alt="Extra 300 (Imagem do site oficial)">
+                    </td>
+                </tr>
+            </table>
+            <br>
         </a>
     </main>
 
+
+
+
+
+
+
+
+
+
+
+
+    <main>
+        <a class="glosario" name="aircraft">
+            <h2>Aircraft</h2>
+            <p> É um tipo de transporte capaz de voar ganhando suporte do ar. Ele neutraliza a força da
+                gravidade por meio de um levantamento estático ou dinâmico do aerofólio ou, em alguns casos, um
+                impulso para baixo dos propulsores.</p>
+        </a>
+    </main>
+    <br>
 </body>
 
 </html>
