--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <h1>Portugal no ar</h1>
                 </td>
                 <td rowspan="2">
-                    <img src="img/logo/Untitled-1.png" alt="Logotipo original do site" width="25%" align="middle">
+                    <img data-aos="fade-left" src="img/logo/Untitled-1.png" alt="Logotipo original do site" width="25%"
+                        align="middle">
                 </td>
             </tr>
             <tr>
@@ -60,7 +61,7 @@
                             <img class="companhias" src="img/companhias/alteradas/White-Airways.jfif">
                         </a>
                     </td>
-                    <td>
+                    <td rowspan="2">
                         <a href="./COMPANHIAS/euro.html">
                             <img class="companhias" src="img/companhias/alteradas/EuroAtlantic.png" alt="euro">
                         </a>
@@ -75,11 +76,6 @@
                     <td>
                         <a href="./COMPANHIAS/sevenair.html">
                             <img class="companhias" src="img/companhias/alteradas/sevenair.jpg">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="./COMPANHIAS/sata.html">
-                            <img class="companhias" src="img/companhias/alteradas/SATA-Air-Acores.jfif">
                         </a>
                     </td>
                     <td>
@@ -100,7 +96,7 @@
                 <td>
                     <img src="img/sobre/sobrecompleto.png" width="80%">
                 </td>
-                <td data-aos="fade-right">
+                <td data-aos="fade-left">
                     <h1>Sobre</h1>
                     <p>Este site tem como objetivo mostrar aos portugueses e ao mundo que temos bastante por onde
                         escolher quando se quer viajar e que somos orgulhosos por ter ótimas companhias dispostas a
