--- a/COMPANHIAS/azores.html
+++ b/COMPANHIAS/azores.html
@@ -83,8 +83,24 @@
 
             <p>Os Açores passariam a dispor de uma companhia aérea própria, a mais antiga do país em continuidade de
                 operação, colocada ao serviço da unidade e do desenvolvimento económico de todos os açorianos.</p>
-            <a href="https://www.azoresairlines.pt/pt-pt/institucional/historia"><img class="imghistoria"
-                    src="../img/companhias/descrição/Beechcraft_CS-TAA.jpg" alt="Imagem retirada do site oficial"></a>
+            <a href="https://www.azoresairlines.pt/pt-pt/institucional/historia" target="_blank"><img
+                    class="imghistoria" src="../img/companhias/descrição/Beechcraft_CS-TAA.jpg"
+                    alt="Imagem retirada do site oficial"></a>
+        </a>
+    </main>
+    <br>
+    <main>
+        <a name="destinos">
+            <h2>Destinos</h2>
+            <p>Esta companhia faz viagens um pouco por todo o mundo, vejamos agora os seus destinos.</p>
+            <br>
+            <p>A Azores Airlines leva-nos a conhecer a maior lilha de Cabo Verde, a <strong>Ilha de Santiago</strong>,
+                dando-nos assim uma porta aberta para conhecer esta bela ilha.<p>
+                <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-cabo-verde"
+                        target="_blank">Saiba mais</a></p>
+                <img src="../img/companhias/destinos/cabo-verde.jpg" alt="Imagem retirada do site oficial">
+                <br>
+
         </a>
     </main>
 </body>
