--- a/COMPANHIAS/azores.html
+++ b/COMPANHIAS/azores.html
@@ -86,19 +86,84 @@
             <a href="https://www.azoresairlines.pt/pt-pt/institucional/historia" target="_blank"><img
                     class="imghistoria" src="../img/companhias/descrição/Beechcraft_CS-TAA.jpg"
                     alt="Imagem retirada do site oficial"></a>
+            <br>
+            <br>
         </a>
     </main>
     <br>
     <main>
         <a name="destinos">
             <h2>Destinos</h2>
-            <p>Esta companhia faz viagens um pouco por todo o mundo, vejamos agora os seus destinos.</p>
+            <h3>Europa</h3>
+            <h4>Portugal</h4>
+            <p>Como é de se esperar de uma companhia aérea açoriana não pode faltar a <strong>Ilha dos Açores</strong>
+                como destino.
+                <em>
+                    <blockquote cite="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-os-acores">
+                        <q>
+                            Se
+                            pretende uma viagem enriquecedora, da qual nunca se irá esquecer, os Açores são o seu
+                            destino.
+                        </q>
+                    </blockquote>
+                </em>
+            </p>
+            <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-os-acores"
+                    target="_blank">Saiba mais</a></p>
+            <img class="imagem_destinos" src="../img/companhias/destinos/Acores.jpg"
+                alt="Imagem retirada do site oficial">
+
             <br>
+
+            <p>Tambem não pode faltar a sua melhor companheira vizinha e companheira desde sempre, a
+                <strong>Madeira</strong>, onde ficará a conhecer Funchal e Porto Santo.
+            </p>
+            <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-madeira"
+                    target="_blank">Saiba mais</a></p>
+            <img class="imagem_destinos" src="../img/companhias/destinos/ilha_da_madeira.jpg"
+                alt="Imagem retirada do site oficial">
+
+            <br>
+
+            <p>Pode visitar também a capital de Portugal,
+                <strong>Lisboa</strong>, onde conhecerá a bela história de Portugal.
+            </p>
+            <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-lisboa"
+                    target="_blank">Saiba mais</a></p>
+            <img class="imagem_destinos" src="../img/companhias/destinos/736x351_Lisbon.jpg"
+                alt="Imagem retirada do site oficial">
+
+            <br>
+
+            <p>Aproveite e viaje até ao
+                <strong>Porto</strong> com a companhia da Azores/SATA, onde conhecerá as tradições desta bonita cidade.
+            </p>
+            <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-porto"
+                    target="_blank">Saiba mais</a></p>
+            <img class="imagem_destinos" src="../img/companhias/destinos/736x351_porto_city.jpg"
+                alt="Imagem retirada do site oficial">
+
+            <br>
+
+
+
+            <h3>América</h3>
+
+
+
+
+
+
+
+
+            <h3>Africa</h3>
             <p>A Azores Airlines leva-nos a conhecer a maior lilha de Cabo Verde, a <strong>Ilha de Santiago</strong>,
                 dando-nos assim uma porta aberta para conhecer esta bela ilha.<p>
                 <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-cabo-verde"
                         target="_blank">Saiba mais</a></p>
-                <img src="../img/companhias/destinos/cabo-verde.jpg" alt="Imagem retirada do site oficial">
+                <img class="imagem_destinos" src="../img/companhias/destinos/cabo-verde.jpg"
+                    alt="Imagem retirada do site oficial">
+                <br>
                 <br>
 
         </a>
