--- a/COMPANHIAS/azores.html
+++ b/COMPANHIAS/azores.html
@@ -95,7 +95,6 @@
         <a name="destinos">
             <h2>Destinos</h2>
             <h3>Europa</h3>
-            <h4>Portugal</h4>
             <p>Como é de se esperar de uma companhia aérea açoriana não pode faltar a <strong>Ilha dos Açores</strong>
                 como destino.
                 <em>
@@ -114,6 +113,7 @@
                 alt="Imagem retirada do site oficial">
 
             <br>
+            <br>
 
             <p>Tambem não pode faltar a sua melhor companheira vizinha e companheira desde sempre, a
                 <strong>Madeira</strong>, onde ficará a conhecer Funchal e Porto Santo.
@@ -123,6 +123,7 @@
             <img class="imagem_destinos" src="../img/companhias/destinos/ilha_da_madeira.jpg"
                 alt="Imagem retirada do site oficial">
 
+            <br>
             <br>
 
             <p>Pode visitar também a capital de Portugal,
@@ -134,6 +135,7 @@
                 alt="Imagem retirada do site oficial">
 
             <br>
+            <br>
 
             <p>Aproveite e viaje até ao
                 <strong>Porto</strong> com a companhia da Azores/SATA, onde conhecerá as tradições desta bonita cidade.
@@ -144,11 +146,101 @@
                 alt="Imagem retirada do site oficial">
 
             <br>
+            <br>
+
+            <p>Como é uma companhia aérea que faz voos para diversas partes do mundo, a Azores faz viagens para outros
+                cantos da europa, vai até a <strong>Alemanha</strong>, <strong>Londres</strong> e
+                <strong>Paris</strong>.
+            </p>
 
 
-
+            <table>
+                <tr>
+                    <td>
+                        <p class="sem_informacao">
+                            <a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-alemanha"
+                                target="_blank">Saiba mais sobre as viagens para Alemanha</a>
+                        </p>
+                    </td>
+                    <td>
+                        <p class="sem_informacao">
+                            <a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-londres"
+                                target="_blank">Saiba
+                                mais
+                                sobre as viagens para Londres</a>
+                        </p>
+                    </td>
+                    <td>
+                        <p class="sem_informacao">
+                            <a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-paris" target="_blank">Saiba
+                                mais
+                                sobre as viagens para Paris</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="33.33%">
+                        <img class="imagem_destinos" src="../img/companhias/destinos/frankfurt.jpg"
+                            alt="Imagem retirada do site oficial">
+                    </td>
+                    <td width="33.33%">
+                        <img class="imagem_destinos"
+                            src="../img/companhias/destinos/Londres_Header_Image_1500x500px.jpg"
+                            alt="Imagem retirada do site oficial">
+                    </td>
+                    <td width="33.33%">
+                        <img class="imagem_destinos" src="../img/companhias/destinos/Paris_Header_Image_1500x500px.jpg"
+                            alt="Imagem retirada do site oficial">
+                    </td>
+                </tr>
+            </table>
+            <br>
+            <br>
             <h3>América</h3>
-
+            <p>Como destino no continente Americano temos três destinos diversos, <strong>Bermudas</strong>,
+                <strong>Boston</strong> e <strong>Toronto</strong>.
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <p class="sem_informacao">
+                            <a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-bermudas"
+                                target="_blank">Saiba mais sobre as viagens para Bermudas</a>
+                        </p>
+                    </td>
+                    <td>
+                        <p class="sem_informacao">
+                            <a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-boston"
+                                target="_blank">Saiba
+                                mais
+                                sobre as viagens para Boston</a>
+                        </p>
+                    </td>
+                    <td>
+                        <p class="sem_informacao">
+                            <a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-toronto"
+                                target="_blank">Saiba
+                                mais
+                                sobre as viagens para Torontos</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="33.33%">
+                        <img class="imagem_destinos"
+                            src="../img/companhias/destinos/Bermuda_Header_Image_1500x500px.jpg"
+                            alt="Imagem retirada do site oficial">
+                    </td>
+                    <td width="33.33%">
+                        <img class="imagem_destinos" src="../img/companhias/destinos/boston-city-736x376.jpg"
+                            alt="Imagem retirada do site oficial">
+                    </td>
+                    <td width="33.33%">
+                        <img class="imagem_destinos" src="../img/companhias/destinos/toronto-at-night.jpg"
+                            alt="Imagem retirada do site oficial">
+                    </td>
+                </tr>
+            </table>
+            <br>
+            <br>
 
 
 
