--- a/COMPANHIAS/azores.html
+++ b/COMPANHIAS/azores.html
@@ -97,15 +97,6 @@
             <h3>Europa</h3>
             <p>Como é de se esperar de uma companhia aérea açoriana não pode faltar a <strong>Ilha dos Açores</strong>
                 como destino.
-                <em>
-                    <blockquote cite="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-os-acores">
-                        <q>
-                            Se
-                            pretende uma viagem enriquecedora, da qual nunca se irá esquecer, os Açores são o seu
-                            destino.
-                        </q>
-                    </blockquote>
-                </em>
             </p>
             <p class="sem_informacao"><a href="https://www.azoresairlines.pt/pt-pt/destinos/voos-para-os-acores"
                     target="_blank">Saiba mais</a></p>
@@ -239,14 +230,9 @@
                     </td>
                 </tr>
             </table>
+
             <br>
             <br>
-
-
-
-
-
-
 
             <h3>Africa</h3>
             <p>A Azores Airlines leva-nos a conhecer a maior lilha de Cabo Verde, a <strong>Ilha de Santiago</strong>,
@@ -257,9 +243,71 @@
                     alt="Imagem retirada do site oficial">
                 <br>
                 <br>
-
         </a>
     </main>
+    <br>
+    <main>
+        <a name="frota">
+            <h2>Frota</h2>
+            <table class="tabelacont">
+                <tr>
+                    <td class="td-cont">
+                        <h1>A321neo LR</h1>
+                        <p>Como primeiro modelo desta lista temos o A321neo LR, este pode levar até 190 passageiros.A
+                            sua velocidade de cruzeiro chega aos 900 Km/h, podendo atingir os 11.900m de altitude.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/MAGICAL_736x490px_.jpg"
+                            alt="Imagem oficial do site">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/WONDER_736x490px_.jpg"
+                            alt="Imagem oficial do site">
+                    </td>
+                    <td class="td-cont">
+                        <h1>A321neo</h1>
+                        <p>A companhia conta tambem com o A321neo , este pode levar até 186 passageiros.A
+                            sua velocidade de cruzeiro chega aos 900 Km/h, podendo atingir os 11.900m de altitude.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h1>A320</h1>
+                        <p>Este modelo tem a capacidade de transportar 165 passageiros. Chega aos 900 Km/h em cruzeiro,
+                            podendo atingir os 10.600m de altitude.</p>
+                    </td>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/NATURAL_736x490px_.jpg"
+                            alt="Imagem oficial do site">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="imagemfrota" src="../img/companhias/frota/Q400_0.jpg" alt="Imagem oficial do site">
+                    </td>
+                    <td class="td-cont">
+                        <h1>Q400</h1>
+                        <p>Este avião pode levar até 80 passageiros.A
+                            sua velocidade de cruzeiro chega aos 667 Km/h, podendo atingir os 7.620m de altitude.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h1>Q200</h1>
+                        <p>Este modelo tem a capacidade de transportar apenas 37 passageiros. Chega aos 535 Km/h em
+                            velocidade de cruzeiro e atinge os 7.620m de altitude. Sendo, assim, o menor avião da Azores
+                            Airlines</p>
+                    </td>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/Q200.jpg" alt="Imagem oficial do site">
+                    </td>
+                </tr>
+            </table>
+        </a>
+    </main>
+    <br>
 </body>
 
 </html>
