--- a/COMPANHIAS/tap.html
+++ b/COMPANHIAS/tap.html
@@ -111,91 +111,174 @@
                 Embraer e ATR para voos curtos, pertencentes à TAP Express.</p>
             <p>A empresa tem cinco fabricantes diferentes da Airbus, duas Embraer e uma ATR.</p>
 
-            <h3>AIRBUS</h3>
-            <h4>Frota NEO, cerca de 38 aviões</h4>
-            <ul>
-                <li>A330-900neo</li>
-                <ul>
-                    <li>298 lugares para passageiros</li>
-                    <li>Atinge a velocidade máxima de 12,500km, e a sua velocidade de cruzeiro é de
-                        930km/h</li>
-                    <li>Este modelo consome menos 17% de combustível por cadeira que a sua geração
-                        anterior, reduzindo significativamente as emissões de CO2 e o seu ruído</li>
-                    <li>Um total de 19 aviões</li>
-                    <li><span id="pontos">...</span></li>
-                </ul>
-            </ul>
-            <span id="mais">
-                <ul>
-                    <li>A321 Long Range – A321LR</li>
-                    <ul>
-                        <li>168 lugares para passageiros</li>
-                        <li>
-                            Atinge a velocidade máxima de 7.400km, e a sua velocidade de cruzeiro é de 900km/h
-                        </li>
-                        <li>
-                            Concebido para operar voos do médio e de longo curso
-                        </li>
-                        <li>Um total de 4 aviões</li>
-                    </ul>
-                </ul>
-                <ul>
-                    <li>A321neo</li>
-                    <ul>
-                        <li>216 lugares para passageiros</li>
-                        <li>Atinge a velocidade máxima de 6.000km, e a sua velocidade de cruzeiro é de 900km/h
-                        </li>
-                        <li>Com equipamentos onde o conforto e a modernidade se encontram para dar uma qualidade
-                            superior ao viajante. Consume menos 15% combustível do que o A321, permitindo voar
-                            rotas mais longas
-                        </li>
-                        <li>Um total de 8 aviões</li>
-                    </ul>
-                </ul>
-                <ul>
-                    <li>A320-200neo</li>
-                    <ul>
-                        <li>174 lugares para passageiros</li>
-                        <li>Atinge a velocidade máxima de 6.500km, e a sua velocidade de cruzeiro é de 900km/h
-                        </li>
-                        <li>Com mais espaço de carga e de cabine, bem como o maior alcance, possui também
-                            motores de última geração, quando comparado com o seu modelo anterior, o A320
-                        </li>
-                        <li>Um total de 7 aviões</li>
-                    </ul>
-                </ul>
-                <ul>
-                    <li>A330</li>
-                    <ul>
-                        <li>263/269 lugares para passageiros</li>
-                        <li>Atinge a velocidade máxima de 12.000km, e a sua velocidade de cruzeiro é de 930km/h
-                        </li>
-                        <li>O A330 é caracterizado pelas palavras Moderno, Confortável e eficiente, é o favorito
-                            da tripulação bem como dos passageiros.
-                        </li>
-                        <li>Um total de 7 aviões</li>
-                    </ul>
-                </ul>
-                <ul>
-                    <li>A321</li>
-                    <ul>
-                        <li>216 lugares para passageiros</li>
-                        <li>Atinge a velocidade máxima de 4.600km, e a sua velocidade de cruzeiro é de 900km/h
-                        </li>
-                        <li>Dentro da família dos Airbus A320, o A321 é a maior e a mais eficiente aeronave. Por
-                            ser muito confortável, eficiente e versátil, este modelo de um só corredor, é
-                            utilizada tanto em viagens curtas, como para viagens com destinos intercontinentais
-                        </li>
-                        <li>Um total de 19 aviões</li>
-                    </ul>
-                </ul>
-            </span>
-            <br>
-            <button onclick="butaoLeiaMais" id="btnLeiaMais">Leia Mais</button>
+            <table class="tabelacont">
+                <tr>
+                    <td class="td-cont">
+                        <h2>Frota Airbus NEO</h2>
+                        <h3>A330-900neo</h3>
+                        <p>Este modelo conta com 298 lugares para passageiros. Atinge a velocidade máxima de 12,500km, e
+                            a sua velocidade de cruzeiro é de 930km/h.</p>
+                        <p>Este modelo consome menos 17% de combustível por cadeira que a sua geração anterior,
+                            reduzindo significativamente as emissões de CO2 e o seu ruído. A TAP conta com 19 unidades
+                            deste modelo.</p>
+                    </td>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/A330-900neo.png" alt="">
+                    </td>
+                </tr>
+            </table>
 
-            <script type="text/javascript" src="js/testeleiamais.js"></script>
+            <table>
+                <tr>
+                    <td>
+                        <a href="#continuar"><button type="submit"> Continuar a ler </button></a>
+                    </td>
+                    <td>
+                        <a href="https://www.flytap.com/pt-pt/a-bordo/conhecer-a-frota" target="_blank"><button
+                                type="submit"> Ver no
+                                site oficial </button></a>
+                    </td>
+                </tr>
+            </table>
+
+
+            <a name="continuar"></a>
+            <table>
+                <tr>
+
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/LongRange.png" alt="">
+                    </td>
+                    <td class="td-cont">
+                        <h3>A321-200 Long Range</h3>
+                        <p>O A321LR tem 168 lugares para passageiros. Atinge a velocidade máxima de 7,400km, e
+                            a sua velocidade de cruzeiro é de 900km/h.</p>
+                        <p>Concebido para operar voos médios e de longo curso. A companhia conta com 4 aviões deste
+                            modelo.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h3>A321-200neo</h3>
+                        <p>Este modelo conta com 216 lugares. Chega a atingir a velocidade máxima de 6,000km, e
+                            a sua velocidade de cruzeiro é de 900km/h.</p>
+                        <p>Com equipamentos onde o conforto e a modernidade se encontram para dar uma qualidade superior
+                            ao viajante. Consume menos 15% combustível do que o A321, permitindo voar rotas mais longas.
+                            A TAP conta com 8 unidades
+                            deste modelo.</p>
+                    </td>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/A321neo.png" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/A320-200neo.png" alt="">
+                    </td>
+                    <td class="td-cont">
+                        <h3>A320-200neo</h3>
+                        <p>O A320-200neo conta com 174 lugares para passageiros. Atinge a velocidade máxima de 6,500km,
+                            e
+                            a sua velocidade de cruzeiro é de 900km/h.</p>
+                        <p>Com mais espaço de carga e de cabine, bem como o maior alcance, possui também motores de
+                            última geração, quando comparado com o seu modelo anterior, o A320. A companhia tem 7 aviões
+                            deste
+                            modelo na sua frota.</p>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="td-cont">
+                        <h2>A330</h2>
+                        <p>Com este modelo, a TAP conta com o <strong>A330-200</strong> podendo abanger 263 a 269
+                            passageiros. Chega a atingir a velocidade máxima de
+                            12,000km, e
+                            a sua velocidade de cruzeiro é de 930km/h.</p>
+                        <p>Com um eficiente consumo e uma cabine confortável e silenciosa, é uma das estrelas da desta
+                            frota.
+                            A TAP conta com 5 unidades
+                            deste modelo.</p>
+                    </td>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/Frota_A330.png" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/Frota_A320.png" alt="">
+                    </td>
+                    <td class="td-cont">
+                        <h2>A320</h2>
+                        <p>O <strong>A320-200</strong> conta com 174 lugares para passageiros. Atinge a velocidade
+                            máxima de
+                            5,500km,
+                            e
+                            a sua velocidade de cruzeiro é de 900km/h.</p>
+                        <p>A versão que originou toda a família, é considerado o standard da categoria. Tem um
+                            corredor
+                            único e é aquele com que todos se comparam. Contando com 16 aviões.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h2>A319</h2>
+                        <p>O <strong>A319-100</strong> pode transportar 144 passageiros. Chega a atingir a velocidade
+                            máxima de
+                            5,700km, e
+                            a sua velocidade de cruzeiro é de 900km/h.</p>
+                        <p>O Airbus A319 alia um espaço generoso a uma performance invejável, suportando 5700 km de voo.
+                            A TAP conta com 8 unidades
+                            deste modelo.</p>
+                    </td>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/Frota_A330.png" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/Frota_Embraer-195.png" alt="">
+                    </td>
+                    <td class="td-cont">
+                        <h2>Embraer195</h2>
+                        <p>Este avião tem lugar para 118 passageiros. Atinge a velocidade
+                            máxima de 4,260km, e a sua velocidade de cruzeiro é de 870km/h.</p>
+                        <p>Com janelas quase 30% mais amplas do que os outros aviões, convida à contemplação da paisagem
+                            e corporiza um maior esforço para a preservar, graças à utilização de materiais mais
+                            silenciosos e de um motor menos poluente. Preste serviço á TAP Express, que conta com 4
+                            aviões.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-cont">
+                        <h2>Embraer190</h2>
+                        <p>Este avião tem a capacidade de transportar 106 passageiros. Atinge a velocidade
+                            máxima de 4,445km, e a sua velocidade de cruzeiro é de 890km/h.</p>
+                        <p>É um dos aviões mais atuais, de tecnologia avançada, que permite abrir novas rotas e chegar a
+                            novos mercados. A TAP conta com 9 unidades
+                            deste modelo (todos eles operados pela Portugália, companhia aéria regional pertencente ao
+                            grupo TAP).</p>
+                    </td>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/Embraer-190-Alta.png" alt="">
+                    </td>
+                </tr>
+                <tr>
+                    <td width="50%">
+                        <img class="imagemfrota" src="../img/companhias/frota/ATR-72.png" alt="">
+                    </td>
+                    <td class="td-cont">
+                        <h2>ATR 72-600</h2>
+                        <p>Este avião tem lugar para apenas 70 passageiros. Atinge a velocidade
+                            máxima de 1,529km, e a sua velocidade de cruzeiro é de 508km/h.</p>
+                        <p> Preste serviço á TAP Express, que conta com 8 aviões, no entanto encontra-se a serviço da
+                            <a href="white.html">White Airlines</a>.
+                        </p>
+                    </td>
+                </tr>
+            </table>-->
         </a>
     </main>
+    <br>
 </body>
 
 </html>
